<resources>
    <string name="app_name">My Notes</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have account? <a href="#">Login</a> </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_password">Password is empty</string>
    <string name="password_and_or_repeat_empty">Password and/or repeat password are empty</string>
    <string name="password_not_match_repeat">Password and repeat password not match</string>
    <string name="submit_button">Submit</string>
    <string name="repeat_password_hint">Repeat Password...</string>
    <string name="password_hint">Password...</string>
    <string name="last_name_hint">Last Name...</string>
    <string name="first_name_hint">First Name...</string>
    <string name="username_hint">Username...</string>
    <string name="login_account">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add_note">Add Note</string>

    <string name="menu_my_notes">My Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_note_title_hint">Title\n</string>
    <string name="edit_note_input_hint">Note...</string>
    <string name="delete">Delete</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="logout">Logout</string>
</resources>