<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_notes">

    <fragment
        android:id="@+id/nav_my_notes"
        android:name="com.maksim.mynotes.ui.home.NotesSummaryFragment"
        android:label="@string/menu_my_notes"
        tools:layout="@layout/fragment_notes_summary" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.maksim.mynotes.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_edit_note"
        android:name="com.maksim.mynotes.ui.editNote.EditNoteFragment"
        android:label="@string/edit_note"
        tools:layout="@layout/fragment_edit_note" />
</navigation>